protonvpn-gui (1.2.0-1) unstable; urgency=medium

  * Fix: Logs should be using UTC time
  * Fix: Display window icons (minimize, maximize and close)
  
 -- Proton Technologies AG <opensource@proton.me>  Mon, 26 Jul 2021 08:12:00 +0100

protonvpn-gui (1.1.0-7) unstable; urgency=medium

  * Enhancement: Improve GUI responsiveness; prevent the GUI from resizing on X axis
  
 -- Proton Technologies AG <opensource@proton.me>  Thu, 01 Jul 2021 13:30:00 +0100
 
protonvpn-gui (1.0.1-1) unstable; urgency=medium

  * Hotfix: Display force disable connectivity check message in case of failure
  
 -- Proton Technologies AG <opensource@proton.me>  Tue, 22 Jun 2021 17:45:00 +0100
 
protonvpn-gui (1.0.0-1) unstable; urgency=medium

  * Update package to stable

 -- Proton Technologies AG <opensource@proton.me>  Tue, 22 Jun 2021 09:00:00 +0100
 
protonvpn-gui (0.8.0-2) unstable; urgency=medium

  * Feature: Add button to get logs

 -- Proton Technologies AG <opensource@proton.me>  Fri, 18 Jun 2021 17:45:00 +0100

protonvpn-gui (0.7.3-3) unstable; urgency=medium

  * Add support for python3-protonvpn-nm-lib 3.2.0

 -- Proton Technologies AG <opensource@proton.me>  Mon, 24 May 2021 12:30:00 +0100

protonvpn-gui (0.7.2-1) unstable; urgency=medium

  * Fix crash when dummy indicator is used in the absence of tray dependency

 -- Proton Technologies AG <opensource@proton.me>  Tue, 11 May 2021 17:40:00 +0100
 
protonvpn-gui (0.7.1-4) unstable; urgency=medium

  * Fix quick settings invisible blocking overlay, preventing from pressing on quick setting buttons
  * Fix tray quick connect and disconnect buttons, so that they're contextually aware of VPN status
  * Display incompatibility dialog on systems that GUI dependencies can not be met
  * Hide quick connect tray item on login window
  * Update GUI and tray after reconnecting to VPN from suspend or network change

 -- Proton Technologies AG <opensource@proton.me>  Tue, 11 May 2021 17:40:00 +0100
