@@ -2,6 +2,7 @@ protonvpn-gui (1.2.0-1) unstable; urgency=medium
 
   * Fix: Logs should be using UTC time
   * Fix: Display window icons (minimize, maximize and close)
+  * Fix: Unable to update server list after 15min (crash report would appear on certain distros)
   
  -- Proton Technologies AG <opensource@proton.me>  Mon, 26 Jul 2021 08:12:00 +0100
 
